Add first pass at description copy

--- a/DESCRIPTION.en_us.html
+++ b/DESCRIPTION.en_us.html
@@ -1,2 +1,3 @@
-<p>Foo Bar.</p>
-<p>foobar</p>
+<p>Blue Ocean is a typeface originally forked from <a href="https://velvetyne.fr/fonts/bluu/">VTF Bluu Next</a> by Jean-Baptiste Morizot, now with an expanded weight range redrawn in quadratic curves by Eli Heuer. The quadratic curve drawing style gives the font a phototypesetting-like quality, and the outline structure allows for interpolation between a wide range of forms.</p>
+
+<p>The Blue Ocean project is led by Eli Heuer, a type designer from Seattle. Pull requests and new issues are welcome. To contribute, see: github.com/eliheuer/blue-ocean</P>
